<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".ListTextFilesActivity" >

    <TextView
        android:id="@+id/textViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_text_service"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="goBackToMainActivity"
        android:text="@string/close" />

    <Button
        android:id="@+id/startDownloadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_close"
        android:layout_alignBottom="@+id/button_close"
        android:layout_alignParentLeft="true"
        android:onClick="startTextDownload"
        android:text="@string/download" />

    <RadioGroup
        android:id="@+id/rdgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_close"
        android:layout_alignRight="@+id/text1" >

         <RadioButton
            android:id="@+id/rdTxtLocalServiceWithAutoCreate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/localServiceWithAutoCreate"
            />
         
        <RadioButton
            android:id="@+id/rdTxtLocalServiceWithActivity"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/localServiceWithAutoCreate" />

        <RadioButton
            android:id="@+id/rdTxtBindAsync"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:text="@string/bindAsync" />

        <RadioButton
            android:id="@+id/rdTxtBindSync"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:text="@string/bindSync" />
    </RadioGroup>

    <EditText
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDownloadText"
        android:layout_alignRight="@+id/button_close"
        android:layout_below="@+id/textViewText"
        android:ems="10"
        android:text="@string/txt3"
        android:textSize="10sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDownloadText"
        android:layout_alignRight="@+id/text3"
        android:layout_below="@+id/text3"
        android:ems="10"
        android:text="@string/txt5"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDownloadText"
        android:layout_alignRight="@+id/text5"
        android:layout_below="@+id/text5"
        android:ems="10"
        android:text="@string/txt4"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDownloadText"
        android:layout_alignRight="@+id/text4"
        android:layout_below="@+id/text4"
        android:ems="10"
        android:text="@string/txt2"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startDownloadText"
        android:layout_alignRight="@+id/text2"
        android:layout_below="@+id/text2"
        android:ems="10"
        android:text="@string/txt1"
        android:textSize="10sp" />

</RelativeLayout>