<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".ListPdfFilesActivity" >

    <TextView
        android:id="@+id/textViewImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pdf"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   <RadioGroup
       android:id="@+id/rdgPdf"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/startPDFDownload"
       android:layout_alignParentLeft="true"
       android:layout_alignRight="@+id/pdf3" >

        <RadioButton
            android:id="@+id/rdPdfLocalServiceWithAutoCreate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/localServiceWithAutoCreate"
            />

        <RadioButton
            android:id="@+id/rdpdfLocalServiceWithActivity"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/localServiceWithActivity" />

        <RadioButton
            android:id="@+id/rdPdfBindAsync"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:text="@string/bindAsync"
             />

        <RadioButton
            android:id="@+id/rdPdfBindSync"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/bindSync" />
    </RadioGroup>

    <EditText
        android:id="@+id/pdf4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewImage1"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:text="@string/pdf4"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/pdf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pdf4"
        android:layout_below="@+id/pdf4"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:text="@string/pdf1"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/pdf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pdf1"
        android:layout_below="@+id/pdf1"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:text="@string/pdf2"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/pdf3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pdf2"
        android:layout_below="@+id/pdf2"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:text="@string/pdf3"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/pdf5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pdf3"
        android:layout_below="@+id/pdf3"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:text="@string/pdf5"
        android:textSize="10sp" />

    <Button
        android:id="@+id/startPDFDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="startPDFDownload"
        android:text="Start Download" />

    <Button
        android:id="@+id/buttonCloseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startPDFDownload"
        android:layout_alignBottom="@+id/startPDFDownload"
        android:layout_alignRight="@+id/pdf5"
        android:layout_marginRight="20dp"
        android:onClick="goBackToMainActivity"
        android:text="Close" />

</RelativeLayout>