<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".ServicesMainActivity" >

    <Button
        android:id="@+id/text_file_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_file_download"
        android:layout_alignRight="@+id/image_file_download"
        android:layout_centerVertical="true"
        android:onClick="getTextFiles"
        android:text="@string/btnTXTFile" />

    <Button
        android:id="@+id/pdf_file_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_file_download"
        android:layout_alignLeft="@+id/text_file_download"
        android:layout_alignRight="@+id/text_file_download"
        android:layout_marginBottom="14dp"
        android:onClick="getPDFFiles"
        android:text="@string/btnPDFFile" />

    <Button
        android:id="@+id/image_file_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_file_download"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="getImageFiles"
        android:text="@string/btnImageFile" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_file_download"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/image_file_download"
        android:layout_marginBottom="20dp"
        android:onClick="closeApp"
        android:text="@string/close" />

    <TextView
        android:id="@+id/textViewImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
